--- a/README.org
+++ b/README.org
@@ -2,3 +2,4 @@
 #+AUTHOR: Asif Mahmud Shimon
 
 * GraphQL handler for gin
+[[https://github.com/asif-mahmud/graphql-go-gin/actions/workflows/Go/badge.svg][Go Tests]]
